@@ -6,6 +6,7 @@
 :100040002C2076312E3000006162636465666700A3
 :1000500031323334353637380000FFFF410C200C85
 :100060004D0C650C730C730C610C670C650C000C6B
+:0A007000FFFF0200FFFFFFFF040086
 :020000040020DA
 :0800000012FF996615AA0F0A10
 :00000001FF
